--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
       <div class="meta" aria-hidden="true">
         <div class="small">Estimated progress: <strong>20%</strong></div>
-        <div class="small">Target launch: <strong>Coming soon</strong></div>
+        <div class="small">Target launch: <strong>Coming soon !!!!!</strong></div>
       </div>
 
       <div class="contact" aria-label="contact options">
