--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
     <section>
       <h1 id="title">We’re working on something great</h1>
-      <p class="lead">hi sogvdfw fois Our site is currently under construction. We’re polishing things up so you’ll have a better experience once we’re live. Thanks for your patience — we’ll be back shortly.</p>
+      <p class="lead">hi Our site is currently under construction. We’re polishing things up so you’ll have a better experience once we’re live. Thanks for your patience — we’ll be back shortly.</p>
 
       <div class="progress" aria-hidden="true">
         <i></i>
